tests/paczka1/small_fuzzy/58456931.err
Error in line 7: 7HOtRZ2 A1 72,6
Error in line 2: V4e9g A381 10,8
Error in line 10: V4e9g A1 25,1
Error in line 9: 7HOtRZ2 S11 9,0
